<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"

    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Topic"
        android:id="@+id/etNotesTopic"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/idTopic"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/etNotesTopic"-->
<!--        android:hint="Topic"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/tvTopic"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        />-->


    <TextView
        android:id="@+id/tvPoem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Poem"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNotesTopic"

        />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/write_here"
        android:id="@+id/etNotes"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPoem"
        app:layout_constraintBottom_toTopOf="@id/llbutton"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idnotes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:id="@+id/llbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/etNotes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:id="@+id/idBtnCancel"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:id="@+id/idBtnAdd"
            android:background="@drawable/custom_button"
            android:text="@string/add"
            android:textAllCaps="false"
            />


    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>