<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"

    >
        <LinearLayout
            android:background="#3C4048"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/llDeleteHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/heading_bg_dialog"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/tvDeletePoem"
                    android:text="@string/delete_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="9dp"
                android:src="@drawable/iv_delete"
                android:id="@+id/iv_update"
                tools:visibility="visible"
                android:visibility="visible"
                />



            <LinearLayout
                android:id="@+id/llbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_margin="5dp"

                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/btnDeleteNo"
                    android:background="@drawable/custom_button"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:foreground="?attr/selectableItemBackgroundBorderless"

                    />
                <Button
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/btnDeleteYes"
                    android:background="@drawable/custom_button"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    />


            </LinearLayout>




        </LinearLayout>

</androidx.cardview.widget.CardView>