<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center_vertical"

    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:background="?attr/bg"

        >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/flheading"
        android:background="@drawable/heading_bg_dialog"
        >

        <TextView
            android:id="@+id/tvTopic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/belgrano"
            android:gravity="center"
            android:text="@string/about_content"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/tv_contentCompleteStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/complete_status"
                android:textColor="?attr/text"
                android:textSize="23sp" />


            <ImageView
                android:id="@+id/iv_isContentComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_incomplete"
               android:layout_gravity="center"
              android:layout_marginBottom="4dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_created_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/created_date"
            android:textColor="?attr/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoemCreatedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/updated_date_bg"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="?attr/text"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_updated_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/updated_date"
            android:textColor="?attr/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoemUpdatedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/created_date_bg"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="?attr/text"
            android:textSize="14sp"

            android:textStyle="bold" />


<!--        <Button-->
<!--            android:id="@+id/btnAboutOpenContentBack"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:background="@drawable/custom_button"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:text="@string/close"-->
<!--            android:gravity="center"-->
<!--            android:layout_gravity="center"-->
<!--            android:foreground="?attr/selectableItemBackgroundBorderless"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_margin="12dp"-->
<!--            />-->

    </LinearLayout>


</androidx.cardview.widget.CardView>

</RelativeLayout>