<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg"
    android:id="@+id/menu_drawer"
    android:fitsSystemWindows="false"
    tools:openDrawer="start"
    tools:context="com.itssuryansh.taaveez.activity.HomePage"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bg"
        tools:context="com.itssuryansh.taaveez.activity.HomePage"
            >






    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/flheading"
    android:background="@drawable/heading_bg">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            app:iconTint="@android:color/white"


            >




        </androidx.appcompat.widget.Toolbar>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            >





        <TextView
            android:id="@+id/tvNotesHeadingHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="तावीज़"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            />
    <TextView
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/tvNotesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taaveez"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        />

            <TextView
                android:id="@+id/tvNotesHeadingUrdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="تَعْوِیذ"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_home_page_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/menu_icon"
            android:layout_gravity="end"
            android:layout_marginRight="2dp"/>

    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="1dp"
        android:id="@+id/rvItemsPoem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/flheading"
        app:layout_constraintBottom_toTopOf="@+id/flbottom"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <LinearLayout

        android:id="@+id/llnoData"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/iv_noData"
        app:layout_constraintTop_toBottomOf="@id/flheading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center_vertical"


        >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/iv_no_data"
        android:id="@+id/iv_noData"
        tools:visibility="visible"
        android:visibility="visible"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:id="@+id/tvNoDataAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/no_data_available"
        android:textColor="?attr/text"
        android:textSize="18sp"
        android:visibility="visible"
        android:textStyle="bold"
        tools:visibility="visible" />
    </LinearLayout>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idFABAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="?attr/mainpage_bottom_nav"
            android:src="@drawable/ic_add"
            app:backgroundTint="@null"
            />





        <FrameLayout
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/flbottom"
            android:background="@drawable/bottom_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                >


                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="?attr/text_white"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/tvabout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="?attr/text_white"
                    android:textSize="25sp" />

            </LinearLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--</ScrollView>-->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:theme="@style/Theme.AppCompat.DayNight"
        android:id="@+id/navigation_menu"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/side_menu"
        android:background="?attr/bg"
        android:layout_gravity = "start" />

</androidx.drawerlayout.widget.DrawerLayout>